@@ -3,6 +3,8 @@
 	* seahorse-key-manager-store.c: Fix problems with showing wrong 
 	columns (bug# 156167)
 	* seahorse-key-store.c: Fix sorting again after above change
+	* seahorse-context.c: Now updates properly when importing into
+	an empty keyring (bug# 156168)
 	
 2004-10-20  Nate Nielsen <nielsen@memberwebs.com>
 
